# localization-analyzer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
localization_analyzer/: __init__.py  __version__.py  cli.py
localization_analyzer/core/: __init__.py  analyzer.py  file_manager.py  health_calculator.py
localization_analyzer/features/: __init__.py  auto_fixer.py  diff.py  dynamic_key_analyzer.py  l10n_generator.py  l10n_migrator.py  language_manager.py  missing_keys_fixer.py  stats.py  sync.py  translator.py  validator.py
localization_analyzer/frameworks/: __init__.py  base.py  swift.py
localization_analyzer/reports/: __init__.py  console_reporter.py  html_reporter.py  json_reporter.py
localization_analyzer/templates/: .localization.yml
localization_analyzer/utils/: __init__.py  backup.py  colors.py  config.py  logging.py  progress.py  server.py  validators.py
tests/: test_analyzer.py  test_cli.py  test_config_validation.py  test_diff.py  test_dynamic_key_analyzer.py  test_emoji_filter.py  test_file_manager.py  test_health_calculator.py  test_html_reporter.py  test_logging.py  test_multilang_chars.py  test_progress.py  test_reporters.py  test_server.py  test_stats.py  test_swift_adapter.py  test_sync.py  test_translator.py  test_validator.py
