[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localization-analyzer"
version = "1.13.1"
description = "Professional localization analyzer for Swift/iOS projects with auto-translation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sezgin Paksoy", email = "sezginpak@gmail.com"}
]
keywords = [
    "localization",
    "i18n",
    "internationalization",
    "swift",
    "ios",
    "strings",
    "translation",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Localization",
    "Topic :: Software Development :: Internationalization",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "certifi>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "build>=1.0",
    "twine>=4.0",
]
watch = ["watchdog>=3.0"]
progress = ["tqdm>=4.65"]

[project.scripts]
localization-analyzer = "localization_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/sezginpak/localization-analyzer"
Documentation = "https://github.com/sezginpak/localization-analyzer#readme"
Repository = "https://github.com/sezginpak/localization-analyzer"
"Bug Tracker" = "https://github.com/sezginpak/localization-analyzer/issues"
Changelog = "https://github.com/sezginpak/localization-analyzer/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["localization_analyzer*"]

[tool.setuptools.package-data]
localization_analyzer = ["templates/*.yml"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
